--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -127,7 +127,7 @@ $border-radius-modal: 7px;
 }
 .body {
   &__navbar {
-    margin: 20px 0;
+    margin: 20px 1px;
     background-color: white;
     border-radius: 5px;
   }
